[package]
name = "rust_tls_client"
version = "0.1.0"
edition = "2021"
include = ["/src"]

description = "A rust tls client based on the cffi distributions of bogdanfinn/tls-client"
license = "BSD-3-Clause"
homepage = "https://github.com/mbc012/rust_tls_client"
documentation = "https://docs.rs/rust_tls_client"
repository = "https://github.com/mbc012/rust_tls_client"
readme = "README.md"
keywords = ["tls", "networking"]



[features]
ubuntu = []
alpine = []


[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
libloading = { version = "0.8.3" }
reqwest = { version = "0.11.27", features = ["blocking", "json"] }
regex = { version = "1.5.4" }
uuid = { version = "1.8.0", features = ["v4"] }
lazy_static = { version = "1.4.0" }

image = "0.23"
base64 = "0.13"